--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,4 +36,13 @@
         <servlet-name>ResultServlet</servlet-name>
         <url-pattern>/Servlet.ResultServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>FankuiServlet</servlet-name>
+        <servlet-class>Servlet.FankuiServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FankuiServlet</servlet-name>
+        <url-pattern>/Servlet.FankuiServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
